--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="col-xs-12">
 
       <h2>Mes appareils</h2>
-
+      <p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' | uppercase   }}</p>
       <ul class="list-group">
 
         <app-appareil  *ngFor="let appareil of appareils"
