finished first exercise of openclassroom tutorial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,15 +4,15 @@
 
     <div class="col-xs-12">
 
-      <h2>Mes appareils</h2>
+      <h2>Posts</h2>
       <p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' | uppercase   }}</p>
       <ul class="list-group">
 
-        <app-appareil  *ngFor="let appareil of appareils"
+        <app-post  *ngFor="let post of posts"
 
-                       [appareilName]="appareil.name"
+                      [title] = "post.title"
 
-                       [appareilStatus]="appareil.status"></app-appareil>
+                      [content]="post.content"></app-post>
 
       </ul>
       <button class="btn btn-success" 
