--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -4,5 +4,6 @@
   <div style="width:20px;height:20px;background-color:red;"
        *ngIf="appareilStatus === 'éteint'"></div>
   <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
+  <p>{{content}}</p>
   <input type="text" class="form-control" [(ngModel)]="appareilName">
 </li>
