--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,7 @@
 <div class="container">
-
   <div class="row">
-
     <div class="col-xs-12">
-
-      <h2>Posts</h2>
-      <p>Mis à jour : {{ lastUpdate | async | date: 'y MMMM EEEE d' | uppercase   }}</p>
-      <ul class="list-group">
-
-        <app-post  *ngFor="let post of posts"
-
-                      [title] = "post.title"
-
-                      [content]="post.content"></app-post>
-
-      </ul>
-      <button class="btn btn-success" 
-              [disabled]="!isAuth"
-              (click)="onAllumer()">Tout allumer</button>
+      <app-appareil-view></app-appareil-view>
     </div>
-
   </div>
-
 </div>
