adding details routing

--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -3,7 +3,9 @@
       <app-appareil  *ngFor="let appareil of appareils; let i = index"
                      [appareilName]="appareil.name"
                      [appareilStatus]="appareil.status"
-                     [index]="i"></app-appareil>
+                     [index]="i"
+                     [id]="appareil.id"></app-appareil>
+                     
     </ul>
     <button class="btn btn-success"
             [disabled]="!isAuth"
