--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -3,6 +3,7 @@
                 'list-group-item-danger': appareilStatus === 'éteint'}">
   
   <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
+  <a [routerLink]="[id]">Détail</a>
   <input type="text" class="form-control" [(ngModel)]="appareilName">
   <button class="btn btn-sm btn-success"
           *ngIf="appareilStatus === 'éteint'"
