adding firebase interaction

--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -9,5 +9,9 @@
     </ul>
     <button class="btn btn-success"
             (click)="onAllumer()">Tout allumer</button>
-<button class="btn btn-danger"
+    <button class="btn btn-danger"
             (click)="onEteindre()">Tout éteindre</button>
+    <button class="btn btn-primary"
+            (click)="onSave()">Enregistrer les appareils</button>
+    <button class="btn btn-primary"
+            (click)="onFetch()">Récupérer les appareils</button>
